@@ -1,4 +1,79 @@
 #!/bin/bash
+# This script attempts to find an existing installation of Java that meets a minimum version
+# requirement on a Linux machine.  If it is successful, it will export a JAVA_HOME environment
+# variable that can be used by another calling script.
+#
+# Rewritten by Abel 'Akronix' Serrano Juste <akronix5@gmail.com>
+
+# Specify the required JDK version.
+# Only major version is checked. Minor version or any other version string info is left out.
+REQUIRED_TEXT_VERSION=1.8
+
+# JVM Options
+DEFAULT_JVM_OPTIONS="-Xms64m -Xmx768m -Dgosh.args="
+GOSH_ARGS="-sc telnetd -p 17179 start"
+
+JAVA9_OPTIONS="--add-modules java.xml.bind --add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.desktop/javax.imageio.stream=ALL-UNNAMED --add-opens=java.desktop/javax.imageio=ALL-UNNAMED --add-opens=java.desktop/com.sun.awt=ALL-UNNAMED"
+
+# Extract major version number for comparisons from the required version string.
+# In order to do that, remove leading "1." if exists, and minor and security versions.
+REQUIRED_MAJOR_VERSION=$(echo $REQUIRED_TEXT_VERSION | sed -e 's/^1\.//' -e 's/\..*//')
+
+# Aux functions:
+die ( ) {
+	echo
+	echo -e "ERROR: $*"
+	exit 1
+}
+
+# First, determine the Java command to use to start the JVM.
+if [ -n "$JAVA_HOME" ] ; then
+	if [ -x "$JAVA_HOME/jre/sh/java" ] ; then
+		# IBM's JDK on AIX uses strange locations for the executables
+		JAVACMD="$JAVA_HOME/jre/sh/java"
+	else
+		JAVACMD="$JAVA_HOME/bin/java"
+	fi
+	if [ ! -x "$JAVACMD" ] ; then
+		die "JAVA_HOME is set to an invalid directory: $JAVA_HOME
+Please set the JAVA_HOME variable in your environment to match the
+location of your Java installation."
+	fi
+else
+	which java >/dev/null 2>&1 || die "JAVA_HOME is not set and no 'java' command could be found in your PATH.
+Please, tell your administrator to install Java >=$REQUIRED_TEXT_VERSION.
+Also, make sure it's accesible from the PATH or set the JAVA_HOME variable to match the location of your Java installation."
+	JAVACMD="java"
+fi
+
+# Then, get the installed version
+INSTALLED_VERSION=$($JAVACMD -version 2>&1 | awk '/version [0-9]*/ {print $3;}')
+echo "Found java $INSTALLED_VERSION"
+
+# Remove double quotes, remove leading "1." if it exists and remove everything apart from the major version number.
+INSTALLED_MAJOR_VERSION=$(echo $INSTALLED_VERSION | sed -e 's/"//g' -e 's/^1\.//' -e 's/\..*//')
+
+if (( INSTALLED_MAJOR_VERSION < REQUIRED_MAJOR_VERSION ))
+then
+	die "Your version of java is too low to run Weasis.\nPlease update to $REQUIRED_TEXT_VERSION or higher"
+fi
+
+if (( INSTALLED_MAJOR_VERSION >= 9 ))
+then
+	echo "add options for Java 9: $JAVA9_OPTIONS"
+    DEFAULT_JVM_OPTIONS="$JAVA9_OPTIONS $DEFAULT_JVM_OPTIONS"
+fi
+
+# Get additional weasis arguments
+userParameters=()
+for var in "$@"
+do
+if [[ $var == \$* ]]
+then
+  userParameters+=("$var")
+fi
+done
+echo user arguments: ${userParameters[@]}
 
 function real_path {
   OIFS=$IFS
@@ -38,11 +113,11 @@ echo "Launcher Path: $fullpath"
 macospath=$(dirname "$fullpath")
 contentspath=$(dirname "$macospath")
 resourcespath="$contentspath/Resources"
-basepath="$contentspath"
+curPath="$contentspath"
 for i in {1..2} ; do
-	basepath=$(dirname "$basepath")
+	curPath=$(dirname "$curPath")
 done
-echo "Base Path: $basepath"
+echo "Base Path: $curPath"
 
 # JAVA_HOME is often not in env
 if [ -z "$JAVA_HOME" ] ; then
@@ -53,71 +128,8 @@ if [ -z "$JAVA_HOME" ] ; then
 	fi
 fi
 
+echo "Weasis launcher directory: $curPath"
 
-
-
-function jversion {
-	if [ -e "$1/bin/java" ] ; then
-		jversion="$($1/bin/java -version 2>&1 | head -1)"
-		jversion=$(expr "$jversion" : '.*\"\(.*\)'\".*)
-	else
-		jversion=0
-	fi
-}
-
-function isJava8orBetter {
-	jversion $1
-	
-	if [ $jversion != 0 ] ; then
-		echo "Java $jversion at $1"
-		IFS="."; declare -a jversion=($jversion); unset IFS
-		if [ "${jversion[0]}" -gt $2 ] || [ "${jversion[0]}" -eq $2 ] && [ "${jversion[1]}" -ge $3 ] ; then
-			return 1
-		fi
-	else
-		echo "Nothing at $1/bin/java"
-	fi
-	
-	return 0
-}
-
-for i in {1..2} ; do
-	isJava8orBetter $JAVA_HOME 1 8
-	
-	if [ $? != 1 ] ; then
-		if [ $i == 1 ] ; then
-			if [ $jversion != 0 ] ; then
-				echo "JAVA_HOME points to an installation of Java $jversion. Looking for other available installations..."
-			else
-				echo "JAVA_HOME points to an unavailable installation of Java. Looking for other available installations..."
-			fi
-			# JAVA_HOME is less than 1.8, what's the highest version available?
-			versions="$(ls -r /System/Library/Frameworks/JavaVM.framework/Versions | grep '[0-9]')"
-			declare -a versions=($versions)
-			# versions array contains version numbers highest to lowest, so pick the 1st
-			export JAVA_HOME="/System/Library/Frameworks/JavaVM.framework/Versions/${versions[0]}/Home"
-		else
-			echo "The Weasis launcher was unable to find an installation of Java 1.8 or better."
-			open "$macospath/failure.app"
-			exit 0
-		fi
-	else
-		break
-	fi
-done
-
-# Get additional weasis arguments
-userParameters=()
-for var in "$@"
-do
-if  [[ $var == \$* ]]
-then
-    userParameters+=("$var")
-fi
-done
-echo user arguments: ${userParameters[@]}
-echo "Launching Weasis with JAVA_HOME set to $JAVA_HOME"
-
-# launch
-
-$JAVA_HOME/bin/java -Xms64m -Xmx768m -Xdock:name=Weasis -Xdock:icon="$resourcespath/logo-button.icns" -Dapple.laf.useScreenMenuBar=true -Dgosh.args="-sc telnetd -p 17179 start" -Dweasis.portable.dir="$basepath" -classpath "$basepath/weasis/weasis-launcher.jar:$basepath/weasis/felix.jar:$basepath/weasis/substance.jar" org.weasis.launcher.WeasisLauncher \$dicom:get --portable ${userParameters[@]}
+cps="$curPath/weasis/weasis-launcher.jar:$curPath/weasis/felix.jar:$curPath/weasis/substance.jar"
+# Launch
+$JAVACMD $DEFAULT_JVM_OPTIONS"$GOSH_ARGS" -Xdock:name=Weasis -Xdock:icon="$resourcespath/logo-button.icns" -Dapple.laf.useScreenMenuBar=true -Dweasis.portable.dir="$curPath" -classpath "$cps" org.weasis.launcher.WeasisLauncher \$dicom:get --portable ${userParameters[@]}
